# static-hackage

./: .travis.yml  LICENSE  README.md  static-hackage.cabal  static-hackage.hs
