Name:                static-hackage
Version:             0.2.0.1
Synopsis:            Static file structure generator for personal Hackage servers.
Description:
    This package contains a program that generates proper files and
    folder so they are prepared for static serving as Hackage
    compatible server. Usual scenario is to have darcs repository with
    binary packages, an on-commit hook that updates a repo and then
    run this program to create necessary support files.
    .
    The trick then is to add the static-hackage repository to your cabal
    config file, with a section such as:
    .
    > remote-repo static-hackage
    >    url: http://localhost:3500/
    .

Homepage:            http://github.com/scrive/static-hackage
License:             BSD3
License-file:        LICENSE
Author:              Gracjan Polak, Michael Snoyman
Maintainer:          gracjanpolak@gmail.com
Copyright:           Scrive AB, Michael Snoyman
Category:            Distribution, Web
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
Extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/scrive/static-hackage.git

Executable static-hackage
  Main-is:             static-hackage.hs
  Ghc-Options:         -Wall
  Build-depends:       base >= 4 && < 5
                     , Cabal >= 2.2 && < 2.5
                     , bytestring
                     , utf8-string
                     , zlib
                     , tar
                     , containers
                     , directory
                     , transformers
